relm4-macros/tests/ui/compile-fail/component-empty.stderr
error: expected `view!` macro invocation
 --> tests/ui/compile-fail/component-empty.rs:6:1
  |
6 | / impl SimpleComponent for TestComponent {
7 | |
8 | | }
  | |_^

error[E0046]: not all trait items implemented, missing: `Input`, `Output`, `Init`, `Root`, `init_root`, `init`
 --> tests/ui/compile-fail/component-empty.rs:6:1
  |
6 | impl SimpleComponent for TestComponent {
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ missing `Input`, `Output`, `Init`, `Root`, `init_root`, `init` in implementation
  |
  = help: implement the missing item: `type Input = /* Type */;`
  = help: implement the missing item: `type Output = /* Type */;`
  = help: implement the missing item: `type Init = /* Type */;`
  = help: implement the missing item: `type Root = /* Type */;`
  = help: implement the missing item: `fn init_root() -> <Self as SimpleComponent>::Root { todo!() }`
  = help: implement the missing item: `fn init(_: <Self as SimpleComponent>::Init, _: <Self as SimpleComponent>::Root, _: ComponentSender<Self>) -> ComponentParts<Self> { todo!() }`
